# polylang

./: README.md  points.json  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  wf.yml
app/: README.md
app/polylang.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/polylang/assets/: vocabulary_template.yml
app/polylang/assets/english/raw/: acronyms.yml  common_phrases.yml  vocabulary.yml
app/polylang/assets/german/processed/: vocabulary.yml
app/polylang/assets/german/raw/: common_phrases.yml  vocabulary.yml
app/polylang/assets/spanish/processed/: vocabulary.yml
app/polylang/assets/spanish/raw/: vocabulary.yml
app/polylang/src/: fetch_flags.py  file_processor.py  flashcard.py  gui.py  mock_flashcards.py  scoring_system.py  tmp.py  world_flags.py
assets/english/processed/: vocabulary.yml
assets/english/raw/: abbreviations.yml  vocabulary.yml
src/: file_processor.py  flashcard.py  mock_flashcards.py  tmp.py
